engine/test/electron/scripts/lexer/errors/unterminated_strings.e
// ERROR TEST: Unterminated strings
// Each line below should produce a lexer error

"unterminated string
